Stabilized core axioms

--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (meta).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (meta).md
@@ -21,8 +21,9 @@ Collect and index axioms (e.g., “Difference precedes Form”) that constrain p
 
 ## Contents (to be expanded)
 
-- Axioms index
-- Individual axiom notes
+- [[A1 — Irreducibility (axiom)]] — ∆ cannot be decomposed without loss
+- [[A2 — Asymmetry (axiom)]] — order matters: ∆(A,B) ≠ ∆(B,A)
+- [[A3 — Recursivity (axiom)]] — forms arise via recursive embedding and closure
 
 ---
 
