--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (meta).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (meta).md
@@ -4,7 +4,6 @@ tags:
   - "#layer/translation"
   - "#status/unstable"
   - "#function/observation"
-uid: 0a04b312-3a64-458e-bed0-4ac413e4fa97
 ---
 
 # 00.0.0.0 - Core Axioms (meta)
@@ -30,5 +29,8 @@ Collect and index axioms (e.g., “Difference precedes Form”) that constrain p
 ## See Also
 
 - [[00.0.0 - Virtual Substrate — Kernel Primitives (meta)]]
-- [[Field]] · [[Void]] · [[Structure]] · [[Awareness]]
+- [[Field]]
+- [[Void]]
+- [[Structure]]
+- [[Awareness]]
 - [[20.1.1 - Schemas & Conventions (meta)]]
