Added some refactored notes from previous vault iteration

--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.2 - Structural Primitives/00.0.0.2 - Structural Primitives (meta).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.2 - Structural Primitives/00.0.0.2 - Structural Primitives (meta).md
@@ -27,6 +27,16 @@ Collect the kernel primitives and their immediate derivatives for quick access a
 
 ---
 
+## Clarification — ontology vs observables
+
+- Primitives here are the kernel operations: **∆**, **R(·)**, **⊚**
+- **Form (F)** is included as the interface/result of stabilization: observable Structure
+- **Structure** itself is an ontological axis (see [[Structure]]), not a primitive
+- **Field** is observable **Void** (interfaces open); diagnostics live under `20.0.2 - Field Classifications`
+- Diagnostics for observable Structure live under `20.0.1 - Form Classifications`
+
+---
+
 ## See Also
 
 - [[00.0.0 - Virtual Substrate — Kernel Primitives (meta)]]
