--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0 - Symbolic Structure (meta).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0 - Symbolic Structure (meta).md
@@ -29,6 +29,12 @@ Define and stabilize vocabulary (e.g., [[Field]], [[Void]], [[Structure]], [[Awa
 - Keep entries concise with Definition, Ontological Role, Comparisons, and Related Terms
 - Use aliases for plural/common variants
 
+### Ontology vs Diagnostics (clarification)
+
+- Ontological axes: **Structure**, **Void**, **Awareness** (S/V/A)
+- Observational diagnostics: **Form** (observable Structure), **Field** (observable Void), **Awareness** (already operational as phase/identity)
+- Use “Cognition” only as a domain instance of Awareness, not as a kernel term
+
 ---
 
 ## See Also
