--- a/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (meta).md
+++ b/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (meta).md
@@ -29,3 +29,4 @@ Provide drop-in skeletons (frontmatter + sections) for each note type (e.g., `pr
 
 - [[20.1 - Semantic Interfaces (meta)]]
 - [[tags]]
+- [[assets]]
