--- a/Delta Theory/20 - Informational Layer/20.3 - Reflective Maps & Cultural Flows/20.3 - Reflective Maps & Cultural Flows (meta).md
+++ b/Delta Theory/20 - Informational Layer/20.3 - Reflective Maps & Cultural Flows/20.3 - Reflective Maps & Cultural Flows (meta).md
@@ -22,7 +22,7 @@ tags:
 ## Conventions
 
 - Tag with `#layer/information`, `#status/seed|unstable|stable`, `#function/observation`.
-- Link core anchors explicitly, e.g. [[ε — Difference Resolution Quantum (constant)]], [[∇S — Sarkisian Differentiation Gradient (Structure)]].
+- Link core anchors explicitly, e.g. [[ε — Difference Resolution Quantum (constant)]], [[∇S — Structure Differentiation Gradient (Sarkisian)]].
 - Treat these as explanatory/reflective artifacts, not specifications.
 
 ---
