--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (meta).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (meta).md
@@ -48,9 +48,9 @@ If UI sort needs to reflect this order, add numeric prefixes to filenames.
 
 | Modulator | Axis | One‑line role |
 |---|---|---|
-| [[∇S — Sarkisian Differentiation Gradient (Structure)]] | S (Structure, P+) | Regulates structural differentiation and boundary sharpening |
-| [[λV — Volozhina Resonance Threshold (Void)]] | V (Void, P-) | Thresholding/resonance across gaps; permits/blocks propagation |
-| [[ψA — Aiza Phase Coherence Anchor (Awareness)]] | A (Awareness, P0) | Phase coherence and identity retention across loops |
+| [[∇S — Structure Differentiation Gradient (Sarkisian)]] | S (Structure, P+) | Regulates structural differentiation and boundary sharpening |
+| [[λV — Void Resonance Threshold (Volozhina)]] | V (Void, P-) | Thresholding/resonance across gaps; permits/blocks propagation |
+| [[ψA — Awareness Phase Coherence Anchor (Aiza)]] | A (Awareness, P0) | Phase coherence and identity retention across loops |
 
 Polarity mapping: Structure → P+, Void → P-, Awareness → P0.
 
