--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (index).md
@@ -28,9 +28,9 @@ Collect and index axioms (e.g., “Difference precedes Form”) that constrain p
 
 ## See Also
 
-- [[00.0.0 - Virtual Substrate — Kernel Primitives (meta)]]
+- [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
 - [[Field]]
 - [[Void]]
 - [[Structure]]
 - [[Awareness]]
-- [[20.1.1 - Schemas & Conventions (meta)]]
+- [[20.1.1 - Schemas & Conventions (index)]]
