--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (index).md
@@ -83,6 +83,6 @@ Domain physics anchors (examples; not core):
 
 ## See Also
 
-- [[00.0.0 - Virtual Substrate — Kernel Primitives (meta)]]
+- [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
 - [[Structure]] · [[Void]] · [[Awareness]]
-- [[20.1.1 - Schemas & Conventions (meta)]]
+- [[20.1.1 - Schemas & Conventions (index)]]
