--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.2 - Structural Primitives/00.0.0.2 - Structural Primitives (meta).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.2 - Structural Primitives/00.0.0.2 - Structural Primitives (meta).md
@@ -39,7 +39,7 @@ Collect the kernel primitives and their immediate derivatives for quick access a
 
 ## See Also
 
-- [[00.0.0 - Virtual Substrate — Kernel Primitives (meta)]]
+- [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
 - [[Field]]
 - [[Void]]
 - [[Structure]]
