--- a/Delta Theory/10 - Implementation Layer/10.1 - Formalization (Math)/10.1.0 - Anchors/10.1.0 - Anchors (meta).md
+++ b/Delta Theory/10 - Implementation Layer/10.1 - Formalization (Math)/10.1.0 - Anchors/10.1.0 - Anchors (meta).md
@@ -22,5 +22,5 @@ tags:
 
 ## See Also
 
-- [[00.0.0.1 - Anchors — Constants & Modulators (meta)]]
+- [[00.0.0.1 - Anchors — Constants & Modulators (index)]]
 
