--- a/Delta Theory/10 - Implementation Layer/10.2 - Domain Applications/10.2.0 - Physics/10.2.0.0 - Anchors/10.2.0.0 - Anchors (meta).md
+++ b/Delta Theory/10 - Implementation Layer/10.2 - Domain Applications/10.2.0 - Physics/10.2.0.0 - Anchors/10.2.0.0 - Anchors (meta).md
@@ -29,6 +29,6 @@ Collect physics‑specific constants/anchors (e.g., c, α, ħ, k_B) used by doma
 
 ## See Also
 
-- [[00.0.0.1 - Anchors — Constants & Modulators (meta)]]
+- [[00.0.0.1 - Anchors — Constants & Modulators (index)]]
 - [[10.2 - Domain Applications]]
 
