--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0 - Symbolic Structure (meta).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0 - Symbolic Structure (meta).md
@@ -39,5 +39,5 @@ Define and stabilize vocabulary (e.g., [[Field]], [[Void]], [[Structure]], [[Awa
 
 ## See Also
 
-- [[20 - Informational Layer (meta)]]
+- [[20 - Informational Layer (index)]]
 - [[tags]]
