--- a/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1 - Semantic Interfaces (index).md
+++ b/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1 - Semantic Interfaces (index).md
@@ -27,5 +27,5 @@ Provide shared conventions and scaffolds so notes link coherently and remain ver
 
 ## See Also
 
-- [[20 - Informational Layer (meta)]]
+- [[20 - Informational Layer (index)]]
 - [[tags]]
