--- a/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (index).md
+++ b/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (index).md
@@ -27,6 +27,6 @@ Provide drop-in skeletons (frontmatter + sections) for each note type (e.g., `pr
 
 ## See Also
 
-- [[20.1 - Semantic Interfaces (meta)]]
+- [[20.1 - Semantic Interfaces (index)]]
 - [[tags]]
 - [[assets]]
