--- a/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1 - Schemas & Conventions (index).md
+++ b/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1 - Schemas & Conventions (index).md
@@ -28,5 +28,5 @@ Centralize schemas and conventions that other notes rely on.
 
 ## See Also
 
-- [[20.1 - Semantic Interfaces (meta)]]
+- [[20.1 - Semantic Interfaces (index)]]
 - [[tags]]
