--- a/Delta Theory/20 - Informational Layer/20.3 - Reflective Maps & Cultural Flows/20.3 - Reflective Maps & Cultural Flows (meta).md
+++ b/Delta Theory/20 - Informational Layer/20.3 - Reflective Maps & Cultural Flows/20.3 - Reflective Maps & Cultural Flows (meta).md
@@ -30,6 +30,6 @@ tags:
 ## See Also
 
 - [[20.0 - Symbolic Structure (meta)]]
-- [[20.1 - Semantic Interfaces (meta)]]
+- [[20.1 - Semantic Interfaces (index)]]
 - [[20.2 - Recursive Trace]]
 
